<resources>
    <string name="app_name">Metronome</string>
    <string name="title">Métronome</string>
    <string name="interval_label">Temps entre les coups</string>
    <string name="interval_placeholder">500 ms</string>
    <string name="bpm_placeholder">120 BPM</string>
    <string name="interval_format_ms">%1$d ms</string>
    <string name="interval_format_bpm">%1$.1f BPM</string>
    <string name="start">Démarrer</string>
    <string name="stop">Arrêter</string>
</resources>
